@@ -13,6 +13,7 @@
    for the file browser and "Add files/folder" buttons.
  * Requests to Musicbrainz against your own account e.g. for collections are now handled through SSL (PICARD-337)
  * Refresh of Albums using Ctrl-R is now more responsive during batch lookups.
+ * Main window is now emitting a "selection_updated" signal, plugin api version bumps to 1.3.0
 
 Version 1.2 - 2013-03-30
  * Picard now requires at least Python 2.6
